--- a/lib/forgot/forgot-form.jade
+++ b/lib/forgot/forgot-form.jade
@@ -1,4 +1,4 @@
-.forgot-container.small-container
+.forgot-container.inner-container
   #forgot-form
     .title-page
       .circle
@@ -6,7 +6,7 @@
       h1= t('forgot.question')
     p.explanation-message #{t('forgot.explanation')}.
     p.success-message.text-info.hide #{t('forgot.mail.sent')}.
-    form(action="/forgot", method="post", autosubmit='autosubmit', autovalidate='autovalidate')
+    form.small-container(action="/forgot", method="post", autosubmit='autosubmit', autovalidate='autovalidate')
       ul.form-messages
       .form-group
         label= t('signup.email')
