--- a/lib/boot/boot.styl
+++ b/lib/boot/boot.styl
@@ -136,10 +136,10 @@ label
   max-width content_width
 
 .small-container
-  max-width 700px
+  max-width 350px
   padding-left 10px
   padding-right 10px
-  margin auto
+  margin 25px auto 15px
 
 .title-page
   text-align center
