--- a/lib/signin/template.jade
+++ b/lib/signin/template.jade
@@ -1,11 +1,11 @@
-.signin-container.inner-container.small-container
+.signin-container.inner-container
   #signin-form
     .title-page
       .circle
         i.icon-signin
       h1 #{t('signin.login-to') + " " + t('common.app-name')}
 
-    form.form(action="/signin", method="post", role="form", autovalidate='autovalidate', autosubmit='autosubmit')
+    form.form.small-container(action="/signin", method="post", role="form", autovalidate='autovalidate', autosubmit='autosubmit')
       ul.form-errors
       .form-group
         label= t('signup.email')
