Adaptation de DemocracyOS pour la plateforme de l'Etat
- Tri des fichiers dans le dossiers dans boot/assets
- Ajout logo République Française
- Adaptation Header : enlever l’icône home / remettre le lien vers la
racine sur le logo et afficher le Organization Name (qui fera office de
nom de la consultation)

--- a/lib/header/styles.styl
+++ b/lib/header/styles.styl
@@ -69,6 +69,8 @@ header.app-header
       font-weight normal
       text-transform initial
       font-size 24px
+    span
+      margin-left 10px
 
   img.logo-image
     display inline-block
