--- a/lib/header/template.jade
+++ b/lib/header/template.jade
@@ -1,6 +1,6 @@
 #header-container
   a(id='toggleButton', data-toggle="offcanvas", data-target="#sidebar" )
-    i.fa.fa-bars
+    i.header-font-color.fa.fa-bars
 
   h1#logo
     a(href="/")
