fix ie javascript

--- a/lib/boot/boot.styl
+++ b/lib/boot/boot.styl
@@ -248,6 +248,12 @@ label
     font-size 14px
     letter-spacing 1px
 
+.medium-editor-action i.fa sup
+  top 0
+  left 1px
+  font-size 100%
+  font-weight bold
+
 /* Site Content Container
 -------------------------------------------------- */
 
