--- a/lib/signup/signup-form.jade
+++ b/lib/signup/signup-form.jade
@@ -57,13 +57,13 @@
                 li: a(href='#{config.subPath}/help/privacy-policy', target='_blank')=t('help.pp.title')
     - if (config.facebookSignin)
       #auth-facebook-form
-        form(action="#{config.subPath}/auth/facebook", method="get", role="form")
+        form.small-container(action="#{config.subPath}/auth/facebook", method="get", role="form")
           button.btn.btn-block.btn-labeled.btn-default.btn-facebook(type="submit", tabindex=tabindex++)
             span.btn-label.pull-left: i.fa.fa-facebook
             span= t('signin.login-with-facebook')
     - if (config.googleSignin)
       #auth-google-form
-        form(action="#{config.subPath}/auth/google", method="get", role="form")
+        form.small-container(action="#{config.subPath}/auth/google", method="get", role="form")
           button.btn.btn-block.btn-labeled.btn-default.btn-google(type="submit", tabindex=tabindex++)
             span.btn-label.pull-left: i.fa.fa-google
             span= t('signin.login-with-google')
