--- a/lib/signup/styles.styl
+++ b/lib/signup/styles.styl
@@ -6,6 +6,7 @@ body
           display none
 
 #signup-form
+  padding-bottom 50px
   .form-group
     input[type="checkbox"]
       margin-right 15px
