--- a/lib/signin/template.jade
+++ b/lib/signin/template.jade
@@ -30,13 +30,13 @@
       .form-group: button.btn.btn-block.btn-info(tabindex=3)=t('signin.login')
   - if (config.facebookSignin)
     #auth-facebook-form
-      form(action="#{config.subPath}/auth/facebook", method="get", role="form")
+      form.small-container(action="#{config.subPath}/auth/facebook", method="get", role="form")
         button.btn.btn-block.btn-labeled.btn-default.btn-facebook(type="submit")
           span.btn-label.pull-left: i.fa.fa-facebook
           span= t('signin.login-with-facebook')
   - if (config.googleSignin)
     #auth-google-form
-      form(action="#{config.subPath}/auth/google", method="get", role="form")
+      form.small-container(action="#{config.subPath}/auth/google", method="get", role="form")
         button.btn.btn-block.btn-labeled.btn-default.btn-google(type="submit")
           span.btn-label.pull-left: i.fa.fa-google
           span= t('signin.login-with-google')
