--- a/lib/admin-users/template.jade
+++ b/lib/admin-users/template.jade
@@ -56,6 +56,12 @@ mixin activity(key)
                 a.filter.role(data-filter=role.label)
                   i.fa.fa-circle(class=role.name,style='color:#{role.value.color.background};')
                   span=role.label
+        .col-xs-12
+          hr/
+          a.btn.btn-default.btn-sm(href='#{config.subPath}/csv/all-users', target='_self', title='export-all-users')
+            span.fa.fa-download
+            &nbsp;
+            span=t('admin-users.export.all-users')
     .list.list-group
       - each user in users
         .list-group-item.user-item(data-id=user.id)
