Tag UX changes : - better list - add color and icon classes input - ipsum generator

--- a/lib/layout/index.styl
+++ b/lib/layout/index.styl
@@ -84,6 +84,9 @@ img.avatar
 
 .btn
   border-radius 2px
+  & > .glyphicon
+    line-height 18px
+    padding-bottom 2px
 
 .btn-success
   background-color #27ae60
