--- a/lib/admin/admin-tags-form/template.jade
+++ b/lib/admin/admin-tags-form/template.jade
@@ -4,19 +4,23 @@
       .circle
         i.icon-user
       h1= t(form.title)
-    form.form(action=form.action, method="post", role="form", autocomplete="off", autovalidate='autovalidate', autosubmit='autosubmit')
+    form.form-horizontal(action=form.action, method="post", role="form", autocomplete="off", autovalidate='autovalidate', autosubmit='autosubmit')
       ul.form-messages
       .form-group
-        label= t('admin-tags-form.label.name')
-        input.form-control(type='text', maxlength='50', id="name", name='name', placeholder=t('admin-tags-form.placeholder.name'), value=tag.name, validate='required')
+        label.col-sm-2.control-label(for='name')= t('admin-tags-form.label.name')
+        div.col-sm-10
+          input.form-control(type='text', maxlength='50', id="name", name='name', placeholder=t('admin-tags-form.placeholder.name'), value=tag.name, validate='required')
       .form-group
-        label= t('admin-tags-form.label.image')
-        .tag-images
-          - each image in images
-            - const id = 'tag-image-' + image.name
-            .tag-image(style='background-image: url(' + image.url + ')')
-              input(type='radio', name='image', value=image.name, checked= tag.image === image.name, validate='any:image', id=id)
-              label(for=id)
+        label.col-sm-2.control-label(for='color')= t('admin-tags-form.label.color')
+        div.col-sm-10
+          input.form-control(type='text', maxlength='7', id='color', name='color', placeholder='#337ab7', value=tag.color, validate='')
       .form-group
-        button.btn.btn-success.btn-block.btn-lg
-          = t('admin-tags-form.button.submit')
+        label.col-sm-2.control-label(for='icon')= t('admin-tags-form.label.icon')
+        div.col-sm-10
+          input.form-control(type='text', maxlength='50', id='icon', name='icon', placeholder=t('admin-tags-form.placeholder.css'), value=tag.icon)
+      .form-group
+        div.col-sm-offset-2.col-sm-10
+          button.btn.btn-success
+            i.glyphicon.glyphicon-save
+            | &emsp;
+            = t('admin-tags-form.button.submit')
