--- a/lib/admin/admin-tags/template.jade
+++ b/lib/admin/admin-tags/template.jade
@@ -1,16 +1,17 @@
 #tags-wrapper
-  .well.well-lg.clearfix
-    .col-xs-12.col-md-2
-      a.btn.btn-success.btn-block.new(href=urlBuilder.for('admin.tags.create', {forum: forum.name}))
-        span.glyphicon.glyphicon-plus
-        = ' ' + t('admin-tags.list.add-tag')
-    .col-xs-12.col-md-7.col-md-offset-3
-      .input-group.input-group-md
+  form.form(action=form.action, method="post", role="form", autocomplete="off", autovalidate='autovalidate', autosubmit='autosubmit')
+    .form-group
+      .input-group
         span.input-group-addon
           i.glyphicon.glyphicon-search
         input.form-control.search(type='text', maxlength='50' placeholder='#{t("admin-tags.list.search.placeholder")}', autofocus)
-    .col-md-3
+        span.input-group-btn
+          a.btn.btn-success(href=urlBuilder.for('admin.tags.create', {forum: forum.name}),title=t('admin-tags.list.add-tag'))
+            i.glyphicon.glyphicon-plus
+          button.btn.btn-info(type='submit',name='ipsum')
+            i.glyphicon.glyphicon-flash
+    ul.form-messages
   .list.list-group
     - each tag in tags
-      a.list-group-item(href=urlBuilder.for('admin.tags.id', {id: tag.id, forum: forum.name}))
-        span.tag-title= tag.name
+      include item.jade
+  
