--- a/lib/admin/admin-sidebar/sidebar-template.jade
+++ b/lib/admin/admin-sidebar/sidebar-template.jade
@@ -1,8 +1,10 @@
 ul.admin-menu.nav.nav-pills.nav-stacked(class=forum.privileges.canChangeTopics ? '' : 'hide')
-  - if (forum.privileges.canCreateTopics)
-    li: a(href=urlBuilder.for('admin.topics', {forum: forum.name}) data-section='topics')=t('admin-sidebar.topics.title')
+  - if (forum.privileges.canEdit)
+    li: a(href=urlBuilder.for('admin.general', {forum: forum.name}) data-section='general')=t('admin-sidebar.general.title')
   - if (forum.privileges.canEdit)
     li: a(href=urlBuilder.for('admin.permissions', {forum: forum.name}) data-section='permissions')=t('admin-sidebar.permissions.title')
+  - if (forum.privileges.canCreateTopics)
+    li: a(href=urlBuilder.for('admin.topics', {forum: forum.name}) data-section='topics')=t('admin-sidebar.topics.title')
   - if (user.staff)
     li: a(href=urlBuilder.for('admin.tags', {forum: forum.name}) data-section='tags')=t('admin-sidebar.tags.title')
   - if (forum.privileges.canChangeTopics)
