--- a/lib/system/layout/index.jade
+++ b/lib/system/layout/index.jade
@@ -13,13 +13,13 @@ block styles
     href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
 
   //- Application Styles
-  link(rel='stylesheet', href='/admin.css')
-  
+  link(rel='stylesheet', href='/system.css')
+
 block content
   section#content.site-content
-  
+
 block scripts
   script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.slim.min.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/js/jasny-bootstrap.min.js")
-  script(src='/admin.js')
+  script(src='/system.js')
