--- a/lib/system/forums/form.jade
+++ b/lib/system/forums/form.jade
@@ -1,22 +1,36 @@
-#tag-wrapper.content-wrapper
-  .tag-admin
-    form.form-horizontal(action=form.action, method="post", role="form", autocomplete="off", autovalidate='autovalidate', autosubmit='autosubmit')
+#forum-wrapper.content-wrapper
+  .forum-admin
+    h3=t('forum.form.title')
+    form.form-horizontal(action=form.action, method='post', role='form', autocomplete='off', autovalidate='autovalidate', autosubmit='autosubmit')
       ul.form-messages
       .form-group
-        label.col-sm-2.control-label(for='name')= t('admin-tags-form.label.name')
+        label.col-sm-2.control-label(for='title')
+          = t('forum.form.title.label')
         div.col-sm-10
-          input.form-control(type='text', maxlength='50', id="name", name='name', placeholder=t('admin-tags-form.placeholder.name'), value=tag.name, validate='required')
+          input.form-control(type='text', validate='required', id='title', name='title', placeholder=t('forum.form.title.placeholder'))
       .form-group
-        label.col-sm-2.control-label(for='color')= t('admin-tags-form.label.color')
+        label.col-sm-2.control-label(for='name')
+          = t('forum.form.url.label')
         div.col-sm-10
-          input.form-control(type='text', maxlength='7', id='color', name='color', placeholder='#337ab7', value=tag.color, validate='')
+          .input-group.subdomain
+            div.input-group-addon
+              span.desktop #{config.protocol}://#{config.host}/
+              span.mobile /
+            input.form-control(type='text', name='name', validate='required forum', autofocus, id='name', autocorrect='off', autocapitalize='off')
+          span.error.name-unavailable.hide=t('forum.form.url.unavailable')
       .form-group
-        label.col-sm-2.control-label(for='icon')= t('admin-tags-form.label.icon')
+        label.col-sm-2.control-label(for='summary')
+          = t('forum.form.summary.label')
         div.col-sm-10
-          input.form-control(type='text', maxlength='50', id='icon', name='icon', placeholder=t('admin-tags-form.placeholder.css'), value=tag.icon)
+          input.form-control(type='text', id='summary', name='summary',maxlength=300, validate='max-length:300', placeholder=t('forum.form.summary.placeholder'))
+      .form-group
+        label.col-sm-2.control-label(for='cover')
+          = t('forum.form.cover')
+        div.col-sm-10
+          input.form-control(type='text', id='cover', name='cover', validate='url', placeholder=t('admin-topics-form.placeholder.cover'))
       .form-group
         div.col-sm-offset-2.col-sm-10
           button.btn.btn-success
-            i.glyphicon.glyphicon-save
+            i.glyphicon.glyphicon-plus
             | &emsp;
-            = t('admin-tags-form.button.submit')
+            = t('forum.form.create.submit')
