--- a/lib/system/forums/styles.styl
+++ b/lib/system/forums/styles.styl
@@ -3,3 +3,17 @@
     > *
       margin-top 4px
       margin-bottom 4px
+  .forum-name
+    color #666666
+
+.subdomain
+  .input-group-addon
+    .mobile
+      display none
+
+    @media screen and (max-width: 450px)
+      .desktop
+        display none
+
+      .mobile
+        display inline
