--- a/lib/admin/admin-permissions/add-user-input/styles.styl
+++ b/lib/admin/admin-permissions/add-user-input/styles.styl
@@ -8,13 +8,13 @@
       animation rotate 1.1s linear infinite
 
       &:before
-        content '\e031'
+        content '\f021'
 
   .status-icon
     font-size .9em
 
     &:before
-      content '\e008'
+      content '\f007'
 
   .dropdown
     border 1px solid #f0f0f0
