PARTIAL : restore agora tags --> tags not yet displayed in topic-layout

--- a/lib/site/topic-layout/sidebar/list/list-item/styles.styl
+++ b/lib/site/topic-layout/sidebar/list/list-item/styles.styl
@@ -14,21 +14,7 @@ li.sidebar-link
     &:hover
       background #fff
   .item-tag
-    color white
-    position relative
-    img.hexagon
-      width 40px
-      height 40px
-      opacity .2
-      z-index 99
-    img.tag-img
-      width 20px
-      height 20px
-      position absolute
-      z-index 100
-      width 30px
-      left 5px
-      top 8px
+    display: none
 
   .item-text
     padding-left 10px
