--- a/lib/settings/settings-notifications/template.jade
+++ b/lib/settings/settings-notifications/template.jade
@@ -8,8 +8,9 @@
       ul.form-messages
       .form-group
         label #{t('settings.notificatinos.get-email-when')}
-      .form-group.new-topic.checkbox
-        label(for='new-topic') #{t('settings.notifications.new-topic')}
+      - if (!config.multiForum)
+        .form-group.new-topic.checkbox
+          label(for='new-topic') #{t('settings.notifications.new-topic')}
       .form-group.replies.checkbox
         label(for='replies') #{t('settings.notificatoins.someone-replies-your-comments')}
       .form-group: button.btn.btn-success.btn-block.btn-lg(tabindex=4)=t('settings.save')
