add config generatorEnabled (default: false)

--- a/lib/system/forums/view.jade
+++ b/lib/system/forums/view.jade
@@ -8,7 +8,8 @@
         span.input-group-btn
           a.btn.btn-success(href=urlBuilder.for('system.forums.create'), title=t('system.list.add'))
             i.glyphicon.glyphicon-plus
-          button.btn.btn-info(type='submit',name='ipsum')
+          - if (config.generatorEnabled)
+            button.btn.btn-info(type='submit',name='ipsum')
             i.glyphicon.glyphicon-flash
     ul.form-messages
   .list.list-group
