--- a/lib/layout/includes/fonts.jade
+++ b/lib/layout/includes/fonts.jade
@@ -1,1 +1,9 @@
-link(href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Noto+Serif:100,400,700&subset=cyrillic,cyrillic-ext,latin,greek-ext,greek,latin-ext', rel='stylesheet', type='text/css')
+link(href='#{config.fontFamilyLink}', rel='stylesheet', type='text/css')
+
+//- Config Color
+- var fontFamily = config.fontFamily;
+style.
+  
+  body {
+    font-family: !{fontFamily} ;
+  }
