--- a/lib/layout/index.jade
+++ b/lib/layout/index.jade
@@ -13,8 +13,19 @@ html(lang=locale)
     //-
     //-   Styles
     //-   ==================================================
-    block styles
+    //- Boostrap Complete
+    link(
+      rel='stylesheet',
+      href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css')
+    link(
+      rel='stylesheet',
+      href='https://cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/css/jasny-bootstrap.min.css')
+    link(
+      rel='stylesheet'
+      href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
 
+    block styles
+      
     //- HTML5 shim, for IE6-8 support of HTML5 elements
     script(src='https://cdn.polyfill.io/v1/polyfill.min.js')
 
