Add login with Google (OAuth2)

--- a/lib/site/sign-in/styles.styl
+++ b/lib/site/sign-in/styles.styl
@@ -1,10 +1,11 @@
 #sign-in
   @import './btn-facebook'
-  
-  max-width: 300px
+  @import './btn-google'
+
+  max-width: 350px
   margin: 0 auto
   padding: 0 15px
-  .facebook-auth-form
+  .auth-form
     .muted
       text-align: center
       font-size: 0.9em
