--- a/lib/site/layout/styles.styl
+++ b/lib/site/layout/styles.styl
@@ -26,3 +26,9 @@ body
   flex-direction column
   align-items center
   overflow auto
+
+.btn-label
+  background none
+  vertical-align bottom
+  float left
+  padding 7px 12px 3px
