--- a/lib/layout/index.styl
+++ b/lib/layout/index.styl
@@ -102,6 +102,15 @@ img.avatar
   padding-left 13px
   padding-right 13px
 
+.btn-label
+  background none
+  vertical-align bottom
+  float left
+  padding 7px 12px 3px
+
+.input-group-addon
+  min-width 40px
+
 label
   font-size .875em
 
