--- a/lib/site/topic-layout/topic-article/comments/styles.styl
+++ b/lib/site/topic-layout/topic-article/comments/styles.styl
@@ -30,9 +30,9 @@
       display: block
       margin: 0 auto
       padding: 5px 10px
-      width: 140px
+      width: 100%
       color: #666
-      text-align: center
+      text-align: right
       white-space: nowrap
       font-weight: 100
 
