--- a/lib/admin/admin-sidebar/sidebar-template.jade
+++ b/lib/admin/admin-sidebar/sidebar-template.jade
@@ -5,9 +5,20 @@ ul.admin-menu.nav.nav-pills.nav-stacked(class=forum.privileges.canChangeTopics ?
     li: a(href=urlBuilder.for('admin.permissions', {forum: forum.name}) data-section='permissions')=t('admin-sidebar.permissions.title')
   - if (forum.privileges.canCreateTopics)
     li: a(href=urlBuilder.for('admin.topics', {forum: forum.name}) data-section='topics')=t('admin-sidebar.topics.title')
-  - if (user.staff)
-    li: a(href=urlBuilder.for('admin.tags', {forum: forum.name}) data-section='tags')=t('admin-sidebar.tags.title')
+  //- - if (user.staff)
+  //-   li: a(href=urlBuilder.for('admin.tags', {forum: forum.name}) data-section='tags')=t('admin-sidebar.tags.title')
   - if (forum.privileges.canChangeTopics)
     li: a(href=urlBuilder.for('admin.comments', {forum: forum.name}) data-section='comments')=t('admin-sidebar.comments.title')
-  - if (config.usersWhitelist)
-    li: a(href="/admin/users" data-section='users')=t('admin-sidebar.whitelists.title')
+  - if (config.usersWhitelist && forum.privileges.canEdit)
+    li: a(href=urlBuilder.for('admin.users', {forum: forum.name}) data-section='users')=t('admin-sidebar.whitelists.title')
+  - if (user.privileges && user.privileges.canManage)
+    - if (config.multiForum)
+      li: a(href=urlBuilder.for('system.forums')) 
+        i.fa.fa-fw.fa-chevron-left
+        | &nbsp;
+        i=t('system.sidebar.forums')
+    - else
+      li: a(href=urlBuilder.for('system.tags')) 
+        i.fa.fa-fw.fa-chevron-left
+        | &nbsp;
+        i=t('system.sidebar.others')
