--- a/lib/layout/index.styl
+++ b/lib/layout/index.styl
@@ -111,6 +111,10 @@ img.avatar
 .input-group-addon
   min-width 40px
 
+.form
+  .radio-inline input[type=radio]
+    margin-top 0
+
 label
   font-size .875em
 
@@ -194,6 +198,11 @@ label
 
 .nav-pills > li > a
   border-radius 2px
+
+.popover-content
+  padding-top 5px
+  p
+    margin-bottom 2px
 
 /* Site Content Container
 -------------------------------------------------- */
@@ -298,3 +307,7 @@ span.error
   overflow hidden
   text-overflow ellipsis
   white-space nowrap
+
+.sidebar, .sidebar-container
+  ul.nav.nav-pills.nav-stacked li a
+    font-size 14px
