--- a/lib/layout/index.styl
+++ b/lib/layout/index.styl
@@ -204,6 +204,10 @@ label
   p
     margin-bottom 2px
 
+.tooltip .tooltip-inner
+  text-transform lowercase
+  font-size 80%
+
 /* Site Content Container
 -------------------------------------------------- */
 .site-content
