- Comment replies : notifications shows your last reply instead of the parent comment - Direct link to comment : available on comment box and notifications - Comments.csv : add user extra fields

--- a/lib/layout/index.styl
+++ b/lib/layout/index.styl
@@ -195,6 +195,10 @@ label
 .nav-pills > li > a
   border-radius 2px
 
+.tooltip .tooltip-inner
+  text-transform lowercase
+  font-size 80%
+
 /* Site Content Container
 -------------------------------------------------- */
 .site-content
