--- a/lib/site/topic-layout/topic-article/comments/list/comment/footer/styles.styl
+++ b/lib/site/topic-layout/topic-article/comments/list/comment/footer/styles.styl
@@ -8,6 +8,14 @@
       display: inline-block
       transform: unquote("rotate(180deg)")
       color: #999
+  .btn
+    &.btn-xs
+      padding 5px
+      margin 0 5px
+      text-transform lowercase
+      font-size 70%
+    &:hover
+      color #337ab7
 
   .votes, .replies-score
     .score
