--- a/lib/site/home-multiforum/styles.styl
+++ b/lib/site/home-multiforum/styles.styl
@@ -20,19 +20,17 @@ color2 = #999
           top 1px
           position relative
   .admin
-    display inline-block
-    text-align center
-    background-color #d9534f
-    color #f9f9f9
-    font-size 16px
-    vertical-align middle
-    margin-left 8px
-    height 32px
-    width 32px
-    border-radius 16px
-    padding-top 7px
-    i.fa, span.icon
-      vertical-align middle
+    position relative
+    top 20px
+    max-width 600px
+    width 94%
+    text-align right
+    color #666
+    font-weight 100
+    span
+      font-size 11px
+      margin-left 10px
+      position relative
 
   .cover
     padding-top 30px
