--- a/lib/system/container.jade
+++ b/lib/system/container.jade
@@ -3,11 +3,11 @@
     ul.system-menu.nav.nav-pills.nav-stacked(role="navigation")
       - if (config.multiForum && user.privileges && user.privileges.canManage)
         li: a(href=urlBuilder.for('system.forums')) #{t('system.sidebar.forums')}
-      - if (user.privileges && user.privileges.canManage)
+      - if (user.staff)
         li: a(href=urlBuilder.for('system.users')) #{t('system.sidebar.users')}
-      - if (user.privileges && user.privileges.canManage)
+      - if (user.staff)
         li: a(href=urlBuilder.for('system.tags')) #{t('admin-sidebar.tags.title')}
-      - if (user.privileges && user.privileges.canManage)
-        li: a(href=urlBuilder.for('system.user-badges')) #{t('system.user-badges')}
+      - if (user.staff)
+      li: a(href=urlBuilder.for('system.user-badges')) #{t('system.user-badges')}
   .content.col-md-10
-    #system-content
+    .content-wrapper
