--- a/lib/admin/admin-whitelists/template.jade
+++ b/lib/admin/admin-whitelists/template.jade
@@ -2,7 +2,7 @@
   .whitelists-admin
     .row.well.well-lg
       .col-xs-12.col-md-2
-        a.btn.btn-success.btn-block.new(href=urlBuilder.for('admin.users.create', {forum: forum.name}))
+        a.btn.btn-success.btn-block.new(href=urlBuilder.for('admin.users.create'))
           span.glyphicon.glyphicon-plus
           = ' ' + t('admin-whitelists.list.add-whitelist')
       .col-xs-12.col-md-7.col-md-offset-3
@@ -14,9 +14,5 @@
     .row
       .list.list-group
         - each whitelist in whitelists
-          a.list-group-item(data-id=whitelist.id, href=urlBuilder.for('admin.users.id', {forum: forum.name, id: whitelist.id}))
-            - if (forum.privileges.canEdit)
-              button.btn.btn-link.delete-whitelist.pull-right(type='button',data-toggle='modal')
-                i.fa.fa-lg.fa-trash.text-danger
+          a.list-group-item(href=urlBuilder.for('admin.users.id', {id: whitelist.id}))
             span.whitelist-title=whitelist.value
-            span.whitelist-id.hidden=whitelist.id
