--- a/lib/site/topic-layout/topic-article/comments/list/comment/content/styles.styl
+++ b/lib/site/topic-layout/topic-article/comments/list/comment/content/styles.styl
@@ -12,9 +12,8 @@
   button
     margin: 0 0 10px 10px
 .text
-  margin-bottom 15px
-  font-size .875em
-  word-wrap break-word
+  margin-bottom: 15px
+  font-size: .875em
 
   h1,
   h2,
@@ -26,22 +25,3 @@
     margin: 0
     font-size: inherit
     line-height: 1.6
-.read-more
-  .text
-    overflow-y hidden
-  .action
-    margin-top -15px
-    text-transform lowercase
-    text-align center
-    .btn
-      display none
-      &:hover
-        text-decoration none
-  &.off
-    .text
-      max-height 1.6em * 5
-    .more
-      display inline-block
-  &.on
-    .less
-      display inline-block
