Revert "common sorts RC1 : backend"
This reverts commit 9165e93c1965aaf1ffbaca205c9863279d1b2605.

--- a/lib/site/topic-layout/topic-article/comments/styles.styl
+++ b/lib/site/topic-layout/topic-article/comments/styles.styl
@@ -30,9 +30,9 @@
       display: block
       margin: 0 auto
       padding: 5px 10px
-      width: 100%
+      width: 140px
       color: #666
-      text-align: right
+      text-align: center
       white-space: nowrap
       font-weight: 100
 
