--- a/lib/site/topic-layout/topic-article/comments/list/comment/footer/styles.styl
+++ b/lib/site/topic-layout/topic-article/comments/list/comment/footer/styles.styl
@@ -14,6 +14,8 @@
       margin 0 5px
       text-transform lowercase
       font-size 70%
+      &:hover
+        color #337ab7
 
   .votes, .replies-score
     .score
