--- a/lib/system/forums/view.jade
+++ b/lib/system/forums/view.jade
@@ -6,8 +6,9 @@
           i.glyphicon.glyphicon-search
         input.form-control.search(type='text', maxlength='50' placeholder=t('forum.list.search.placeholder'), autofocus)
         span.input-group-btn
-          a.btn.btn-success(href=urlBuilder.for('system.forums.create'), title=t('system.list.add'))
-            i.glyphicon.glyphicon-plus
+          - if (user.privileges.canCreate)
+            a.btn.btn-success(href=urlBuilder.for('system.forums.create'), title=t('system.list.add'))
+              i.glyphicon.glyphicon-plus
           - if (config.generatorEnabled)
             button.btn.btn-info(type='submit',name='ipsum')
             i.glyphicon.glyphicon-flash
