- migrate to react-chartjs (topic action vote) - detailed contribution stats (topic) - fixes on whitelist

--- a/lib/site/topic-layout/topic-article/social/styles.styl
+++ b/lib/site/topic-layout/topic-article/social/styles.styl
@@ -6,22 +6,32 @@
   .participants-box
     padding-top: 3px
 
-    span
-      display: inline-block
-      font-size: 14px
-      color: #666
-      margin-right: 5px
-      margin-bottom: 5px
-
-    .participant-profile
-      .avatar
-        width: 20px
-        height: 20px
-        border-radius: 50%
-
     .view-more
       display: inline-block
       cursor: pointer
+
+  .participants-item
+    display: inline-block
+    font-weight: bold
+    margin-right: 1em
+    .fa
+      margin-right: 2px
+      font-size 18px
+    .icon-ratings
+      font-weight 300
+      font-size 13px
+      font-style: normal
+      .fa
+        font-size 15px
+      .fa-thumbs-up
+        vertical-align: super
+        position: relative
+        left: 2px
+      .fa-thumbs-down
+        vertical-align: sub
+        position: relative
+        left: 2px
+
 
   .share-links
     min-width: 72px
