--- a/lib/site/topic-layout/topic-article/styles.styl
+++ b/lib/site/topic-layout/topic-article/styles.styl
@@ -39,9 +39,14 @@
 
 .topic-article-content
   max-width 600px
-  margin 0 auto
+  margin 0 auto 35px
   padding-left 15px
   padding-right 15px
+
+  .results-total
+    font-weight bold
+    text-transform uppercase
+    text-align center
 
 .embed-container
   position relative
