--- a/lib/site/topic-layout/topic-article/vote/styles.styl
+++ b/lib/site/topic-layout/topic-article/vote/styles.styl
@@ -6,8 +6,15 @@ border_radius = 3px
 .proposal-options
   position relative
   margin-bottom 2em
-  .alert
+  .ownVote
     margin 20px 0 10px
+    font-weight: bold
+    &.vote-yes
+      color #a4cb53
+    &.vote-no
+      color #d95e59
+    &.vote-abstain
+      color #666
   .overlay-vote
     position absolute
     left 0
