--- a/lib/site/home-forum/topic-card/styles.styl
+++ b/lib/site/home-forum/topic-card/styles.styl
@@ -30,6 +30,34 @@
   .participants
     position absolute
     bottom 0
-    margin 5px 10px
-    color #555
-    font-size 13px
+    // background-color #333
+    // color #e9e9e9
+    width 100%
+    margin 5px auto
+    text-align center
+    font-weight bold
+
+    .participants-item
+      display: inline-block
+      font-weight: bold
+      margin-right: 1em
+      &:last-child
+        margin-right 0
+
+      .fa
+        margin-right: 2px
+        font-size 14px
+      .icon-ratings
+        font-weight 300
+        font-size 11px
+        font-style: normal
+        .fa
+          font-size 15px
+        .fa-thumbs-up
+          vertical-align: super
+          position: relative
+          left: 2px
+        .fa-thumbs-down
+          vertical-align: sub
+          position: relative
+          left: 2px
