--- a/lib/site/help/styles.styl
+++ b/lib/site/help/styles.styl
@@ -12,6 +12,12 @@
 
     .article-content
       max-width 730px
+      padding-bottom: 55px
+      img
+        max-width: 100%;
+        height: auto;
+        display: block;
+        border 1px solid #e9e9e9
 
   @import './sidebar/styles'
   @import './md-guide/styles'
