--- a/lib/admin/admin-general/template.jade
+++ b/lib/admin/admin-general/template.jade
@@ -13,7 +13,7 @@
       .form-group
         label.col-sm-2.control-label(for='coverUrl')= t('forum.form.cover')
         div.col-sm-10
-          input.form-control(type='text', maxlength='50', id='coverUrl', name='coverUrl', placeholder=t('admin-topics-form.placeholder.cover'), value=forum.coverUrl, validate='url')
+          input.form-control(type='text', id='coverUrl', name='coverUrl', placeholder=t('admin-topics-form.placeholder.cover'), value=forum.coverUrl, validate='url')
       .form-group
         div.col-sm-offset-2.col-sm-10
           button.btn.btn-success
