Users import from CSV

--- a/lib/system/users/template.jade
+++ b/lib/system/users/template.jade
@@ -12,6 +12,7 @@
         //-     button.btn.btn-info(type='submit',name='ipsum')
         //-       i.glyphicon.glyphicon-flash
     ul.form-messages
+  .clearfix.users-import  
   .list.list-group
     - each user in users
       include item.jade
