--- a/lib/site/topic-layout/topic-article/social/styles.styl
+++ b/lib/site/topic-layout/topic-article/social/styles.styl
@@ -1,3 +1,6 @@
+.message-closed
+  font-weight: bold
+  margin-bottom: 25px
 .topic-social
   display: flex
   justify-content: space-between
@@ -31,7 +34,6 @@
         vertical-align: sub
         position: relative
         left: 2px
-
 
   .share-links
     min-width: 72px
