--- a/lib/site/topic-layout/topic-article/comments/list/comment/footer/styles.styl
+++ b/lib/site/topic-layout/topic-article/comments/list/comment/footer/styles.styl
@@ -32,6 +32,17 @@
       cursor: pointer
       border: 0
       background: transparent
+    .share-links
+      display: inline-block
+
+      a
+        color: black
+        padding-left: 5px
+        padding-right: 5px
+        
+        &:hover
+          text-decoration: none
+          color #337ab7
 
   .votes
     .upvote
