UX height 100% (+fixes)

--- a/lib/site/topic-layout/topic-article/styles.styl
+++ b/lib/site/topic-layout/topic-article/styles.styl
@@ -1,6 +1,7 @@
 .topic-article-wrapper
   padding-top: 1em
   width: 100%
+  background-color #fff
 
   @import './admin-actions/styles'
   @import './header/styles'
@@ -39,7 +40,7 @@
 
 .topic-article-content
   max-width 600px
-  margin 0 auto 35px
+  margin 0 auto
   padding-left 15px
   padding-right 15px
 
@@ -47,6 +48,9 @@
     font-weight bold
     text-transform uppercase
     text-align center
+
+.topic-bottom-spacer
+  height 35px
 
 .embed-container
   position relative
