--- a/lib/site/topic-layout/styles.styl
+++ b/lib/site/topic-layout/styles.styl
@@ -2,5 +2,9 @@
   height inherit
   display flex
 
+#root, #outer-layout
+  min-height 100%
+  background-color #f9f9f9
+
 @import './sidebar/styles'
 @import './topic-article/styles'
