--- a/lib/system/users/item.jade
+++ b/lib/system/users/item.jade
@@ -1,2 +1,4 @@
 div.list-group-item
-  span.user-title= user.displayName
+  b.user-title= user.displayName
+  |&nbsp;-&nbsp;
+  span.user-email= user.id
