--- a/lib/site/topic-layout/topic-article/comments/list/comment/content/styles.styl
+++ b/lib/site/topic-layout/topic-article/comments/list/comment/content/styles.styl
@@ -1,31 +1,59 @@
 .edit-form
   text-align: right;
   margin: 0
-  textarea
-    width: 100%
-    border: 1px solid #ebebeb
-    outline: none
+  .comments-edit, input.form-control.comment-title
+    margin 0.5em auto 0.7em
+    border 0
+    padding 0
+    line-height 1.6
+    color inherit
+    outline none
+    box-shadow none
+    background-color transparent
+
+  .comments-edit
+    width 100%
+    flex-grow: 2
     resize: none
-    margin-bottom: 10px
-    font-size: 0.875em
-    overflow: hidden
+    font-size .875em
+    font-weight inherit
+
+  input.form-control.comment-title
+    line-height: 1.6
+    font-size 1.125em
+    font-weight bold
+    font-style italic
+
   button
     margin: 0 0 10px 10px
+
+h1.title
+  margin 0.5em auto 0.7em
+  font-size 1.2em
 .text
   margin-bottom 15px
-  font-size .875em
+  font-size 0.875em
   word-wrap break-word
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  p
+  h1, h2, h3,
+  h4, h5, h6,
+  p, blockquote, ul, li
     margin: 0
-    font-size: inherit
+    font-size inherit
     line-height: 1.6
+  h1, h2
+    font-size 1.125em
+    font-weight bold
+  h2
+    color #666666
+  h3, h4, h5, h6
+    font-size 1em
+    font-weight bold
+  h4, h5, h6
+    color #666666
+  p, ul, li
+    margin 0.5em auto 0.7em
+
 .read-more
   .text
     overflow-y hidden
