--- a/lib/site/topic-layout/topic-article/comments/order-by/styles.styl
+++ b/lib/site/topic-layout/topic-article/comments/order-by/styles.styl
@@ -1,12 +1,26 @@
 .comments-sort
-  position: relative
-  float: right
   z-index: 8
+  margin-bottom 15px
+
+  .nav-tabs, .nav-pills
+    &>li>a
+      font-size: .8em
+      font-weight normal
+      // padding: 0 10px 0 0
+      text-transform: capitalize
+
+  .nav-pills
+    &>li>a
+      color #666
+    &>li.active>a
+      background-color white
+      color rgba(0,0,0,0.8)
+      font-weight bold
+      box-shadow:
+        0 1px 3px rgba(0,0,0,.12),
+        0 1px 2px rgba(0,0,0,.24)
 
   .comments-sort-btn
-    font-size: .8em
-    padding: 0 10px 0 0
-    outline: none
 
   .caret
     right: 0
