--- a/lib/site/topic-layout/topic-article/vote/styles.styl
+++ b/lib/site/topic-layout/topic-article/vote/styles.styl
@@ -99,8 +99,8 @@ border_radius = 3px
     background white
     padding 20px 0
     h5
-      text-transform uppercase
-      margin-top 0
+      margin: 0 0 20px;
+      font-size: 1.25em;
     .delegation-box
       display inline-block
   .vote-box
