Comments module settings (topicsAttrs) : -  topicsAttrs : disable comments -  topicsAttrs : comments length -  config.json : ad-hoc default values -  both attrs can be enable on forum settings

--- a/lib/admin/admin-general/styles.styl
+++ b/lib/admin/admin-general/styles.styl
@@ -1,4 +1,17 @@
 #general-wrapper
   .form-group
+    min-height 35px
+
     span.error
       top 40px
+    label.text-left
+      text-align left
+
+    &.topicsAttrs
+      padding-top 3px
+      margin-bottom 3px
+      & > label
+        padding-top 6px
+
+    &.actions
+      margin-top 15px
