--- a/lib/site/topic-layout/topic-article/comments/form/styles.styl
+++ b/lib/site/topic-layout/topic-article/comments/form/styles.styl
@@ -47,6 +47,12 @@
     box-shadow none
     background-color transparent
 
+  .form-group
+    display: flex
+    flex-wrap: wrap
+    flex-grow: 2
+    resize: none
+
   .comments-create
     flex-grow: 2
     resize: none
