Added multiple choice option to poll's form

--- a/lib/admin/admin-topics-form/template.jade
+++ b/lib/admin/admin-topics-form/template.jade
@@ -91,6 +91,13 @@
           - if (!pollOpen)
             input.form-control(type='tags', name='action.options', value=pollOptions)
 
+        .form-group.poll-options.hide
+          .form-check
+          - var multiple = (topic.action && topic.action.multiple)
+            label= t('admin-topics-form.label.multiple')
+            .some-div
+              input.form-check-input(type='checkbox', name='action.multiple', checked=(multiple ? "checked" : undefined))
+
         .form-group
           label= t('admin-topics-form.label.summary')
           - if (te('admin-topics-form.description.summary'))
